tests/baselines/reference/inheritanceStaticMembersIncompatible.errors.txt
tests/cases/compiler/inheritanceStaticMembersIncompatible.ts(5,7): error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
  Types of property 'x' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/inheritanceStaticMembersIncompatible.ts (1 errors) ====
    class a {
        static x: string;
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type 'number' is not assignable to type 'string'.
        static x: number;
    }